# quickbooks-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.mcp/: server.json
examples/: claude-desktop-config.json  oauth-setup-guide.md  usage-examples.md
scripts/: setup_oauth.py
src/quickbooks_mcp/: __init__.py  __main__.py  config.py  server.py
src/quickbooks_mcp/auth/: __init__.py  oauth.py  token_store.py
src/quickbooks_mcp/client/: __init__.py  qbo_client.py  query_builder.py
src/quickbooks_mcp/tools/: __init__.py  accounts.py  analytics.py  customers.py  expenses.py  invoices.py  reports.py  write_ops.py
src/quickbooks_mcp/utils/: __init__.py  formatting.py  license.py  money.py
tests/: __init__.py  conftest.py  test_expenses.py  test_invoices.py  test_reports.py  test_write_ops.py
